# chatty

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.py  example_logger.cxx  make_screencast.sh
include/chatty/: archive.hxx  logentry.hxx  logger.hxx  logline.hxx  logloop.hxx  logtable.hxx  logtimedline.hxx  logutils.hxx
python/: CMakeLists.txt  __init__.py  pyLogger.cxx
src/: CMakeLists.txt  logentry.cxx  logger.cxx  logline.cxx  logloop.cxx  logtable.cxx  logtimedline.cxx  logutils.cxx
test/: CMakeLists.txt  test_logger.cxx  test_logger.py
